--- a/traning2-5-6/traning2-5-6/Info.plist
+++ b/traning2-5-6/traning2-5-6/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>常に位置情報を利用します。</string>
 	<key>NSLocationUsageDescription</key>
 	<string>アプリ使用中に位置情報を利用します。</string>
 	<key>CFBundleDevelopmentRegion</key>
